<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="enrique.pichangatpa.MenuActivity"
    android:background="#235CFF">

    <ImageView

        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bttnPlay"
        android:text="@string/bttnPlay"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="#fff6ff95" />
    <Button
        android:id="@+id/bttnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bttnPlay"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:layout_margin="20dp"
        android:background="#fff6ff95" />
    <Button
        android:id="@+id/bttnExit"
        android:text="@string/quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bttnSettings"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="#fff6ff95" />
    <EditText
        android:id="@+id/mEditTextTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bttnExit"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>
